# scorep_plugin_nec

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  nec.c
include/scorep_plugin_nec/: nec_sensors.hpp
src/: .nec.cpp.swp  nec.cpp
